LPS-166113 Move relationship endpoints to a non autogenerated class as it will return java Object class for both System and Custom objects
