# modules/apps/object/object-rest-impl/rest-openapi.yaml
@@ -290,74 +290,6 @@ paths:
                             schema:
                                 $ref: "#/components/schemas/ObjectEntry"
             tags: ["ObjectEntry"]
-    "/{currentObjectEntryId}/{objectRelationshipName}":
-        get:
-            operationId: getCurrentObjectEntriesObjectRelationshipNamePage
-            parameters:
-                - in: path
-                  name: currentObjectEntryId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-                - in: path
-                  name: objectRelationshipName
-                  required: true
-                  schema:
-                      type: string
-                - in: query
-                  name: page
-                  schema:
-                      type: integer
-                - in: query
-                  name: pageSize
-                  schema:
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ObjectEntry"
-                                type: array
-                        application/xml:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ObjectEntry"
-                                type: array
-            tags: ["ObjectEntry"]
-    "/{currentObjectEntryId}/{objectRelationshipName}/{relatedObjectEntryId}":
-        put:
-            operationId: putCurrentObjectEntry
-            parameters:
-                - in: path
-                  name: currentObjectEntryId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-                - in: path
-                  name: objectRelationshipName
-                  required: true
-                  schema:
-                      type: string
-                - in: path
-                  name: relatedObjectEntryId
-                  required: true
-                  schema:
-                      format: int64
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                $ref: "#/components/schemas/ObjectEntry"
-                        application/xml:
-                            schema:
-                                $ref: "#/components/schemas/ObjectEntry"
-            tags: ["ObjectEntry"]
     "/{objectEntryId}":
         delete:
             operationId: deleteObjectEntry
